--- a/dev/index.html
+++ b/dev/index.html
@@ -26,20 +26,22 @@ population2 = construct(Population, deepcopy([cell1, cell3, cell4]))
 population3 = construct(Population, deepcopy([cell1, cell3, cell4]))
 tissue1 = construct(Tissue, deepcopy([population, population2, population3])) # Make a Tissue from Populations
 tissue2 = construct(Tissue, deepcopy([population2, population, population3]))
-embryo = construct(Embryo, deepcopy([tissue1, tissue2])) # Make an embryo from Tissues</code></pre><h2 id="Idea"><a class="docs-heading-anchor" href="#Idea">Idea</a><a id="Idea-1"></a><a class="docs-heading-anchor-permalink" href="#Idea" title="Permalink"></a></h2><p>The idea behind MultiScaleArrays is simple. The <code>*DiffEq</code> solvers (OrdinaryDiffEq.jl, StochasticDiffEq.jl, DelayDiffEq.jl, etc.) and native optimization packages like Optim.jl in their efficient in-place form all work with any Julia-defined <code>AbstractArray</code> which has a linear index. Thus, to define our multiscale model, we develop a type which has an efficient linear index. One can think of representing cells with proteins as each being an array with values for each protein. The linear index of the multiscale model would be indexing through each protein of each cell. With proper index overloads, one can define a type such that <code>a[i]</code> does just that, and thus it will work in the differential equation solvers. MultiScaleArrays.jl takes that further by allowing one to recursively define an arbitrary <code>n</code>-level hierarchical model which has efficient indexing structures. The result is a type which models complex behavior, but the standard differential equation solvers will work directly and efficiently on this type, making it easy to develop novel models without having to re-develop advanced adaptive/stiff/stochastic/etc. solving techniques for each new model.</p><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to SciML.</p></li><li><p>See the <a href="https://github.com/SciML/SciMLStyle">SciML Style Guide</a> for common coding practices and other style decisions.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.zulipchat.com/#narrow/stream/279055-sciml-bridged">Julia Zulip</a></li><li>On the <a href="https://discourse.julialang.org">Julia Discourse forums</a></li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Project.toml`
+embryo = construct(Embryo, deepcopy([tissue1, tissue2])) # Make an embryo from Tissues</code></pre><h2 id="Idea"><a class="docs-heading-anchor" href="#Idea">Idea</a><a id="Idea-1"></a><a class="docs-heading-anchor-permalink" href="#Idea" title="Permalink"></a></h2><p>The idea behind MultiScaleArrays is simple. The <code>*DiffEq</code> solvers (OrdinaryDiffEq.jl, StochasticDiffEq.jl, DelayDiffEq.jl, etc.) and native optimization packages like Optim.jl in their efficient in-place form all work with any Julia-defined <code>AbstractArray</code> which has a linear index. Thus, to define our multiscale model, we develop a type which has an efficient linear index. One can think of representing cells with proteins as each being an array with values for each protein. The linear index of the multiscale model would be indexing through each protein of each cell. With proper index overloads, one can define a type such that <code>a[i]</code> does just that, and thus it will work in the differential equation solvers. MultiScaleArrays.jl takes that further by allowing one to recursively define an arbitrary <code>n</code>-level hierarchical model which has efficient indexing structures. The result is a type which models complex behavior, but the standard differential equation solvers will work directly and efficiently on this type, making it easy to develop novel models without having to re-develop advanced adaptive/stiff/stochastic/etc. solving techniques for each new model.</p><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to SciML.</p></li><li><p>See the <a href="https://github.com/SciML/SciMLStyle">SciML Style Guide</a> for common coding practices and other style decisions.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.zulipchat.com/#narrow/stream/279055-sciml-bridged">Julia Zulip</a></li><li>On the <a href="https://discourse.julialang.org">Julia Discourse forums</a></li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/github-runners/deepsea4-2/_work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Project.toml`
   [e30172f5] Documenter v1.16.1
-  [f9640e96] MultiScaleArrays v1.17.0 `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.12.3
+  [f9640e96] MultiScaleArrays v1.17.0 `~/github-runners/deepsea4-2/_work/MultiScaleArrays.jl/MultiScaleArrays.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.12.3
 Commit 966d0af0fdf (2025-12-15 11:20 UTC)
 Build Info:
   Official https://julialang.org release
 Platform Info:
   OS: Linux (x86_64-linux-gnu)
-  CPU: 4 × AMD EPYC 7763 64-Core Processor
+  CPU: 128 × AMD EPYC 7513 32-Core Processor
   WORD_SIZE: 64
   LLVM: libLLVM-18.1.7 (ORCJIT, znver3)
   GC: Built with stock GC
-Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Manifest.toml`
-  [47edcb42] ADTypes v1.20.0
+Threads: 1 default, 1 interactive, 1 GC (on 128 virtual cores)
+Environment:
+  JULIA_DEPOT_PATH = /home/chrisrackauckas/github-runners/deepsea4-2/.julia</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/github-runners/deepsea4-2/_work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Manifest.toml`
+  [47edcb42] ADTypes v1.21.0
   [a4c015fc] ANSIColoredPrinters v0.0.1
   [1520ce14] AbstractTrees v0.4.5
   [7d9f7c33] Accessors v0.1.43
@@ -54,7 +56,7 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [d360d2e6] ChainRulesCore v1.26.0
   [fb6a15b2] CloseOpenIntervals v0.1.13
   [944b1d66] CodecZlib v0.7.8
-  [38540f10] CommonSolve v0.2.4
+  [38540f10] CommonSolve v0.2.6
   [bbf7d656] CommonSubexpressions v0.3.1
   [f70d9fcc] CommonWorldInvalidations v1.0.0
   [34da2185] Compat v4.18.1
@@ -64,8 +66,8 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [adafc99b] CpuId v0.3.1
   [9a962f9c] DataAPI v1.16.0
   [864edb3b] DataStructures v0.19.3
-  [2b5f629d] DiffEqBase v6.193.0
-  [459566f4] DiffEqCallbacks v4.10.1
+  [2b5f629d] DiffEqBase v6.194.0
+  [459566f4] DiffEqCallbacks v4.11.0
   [77a26b50] DiffEqNoiseProcess v5.24.1
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
@@ -81,10 +83,10 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7034ab61] FastBroadcast v0.3.5
   [9aa1b823] FastClosures v0.3.2
   [442a2c76] FastGaussQuadrature v1.1.0
-  [a4df4552] FastPower v1.2.0
+  [a4df4552] FastPower v1.3.0
   [1a297f60] FillArrays v1.15.0
   [6a86dc24] FiniteDiff v2.29.0
-  [f6369f11] ForwardDiff v1.3.0
+  [f6369f11] ForwardDiff v1.3.1
   [069b7b12] FunctionWrappers v1.1.3
   [77dc65aa] FunctionWrappersWrappers v0.1.3
   [46192b85] GPUArraysCore v0.2.0
@@ -107,9 +109,9 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [0e77f7df] LazilyInitializedFields v1.3.0
   [5078a376] LazyArrays v2.9.4
   [2d8b4e74] LevyArea v1.0.0
-  [87fe0de2] LineSearch v0.1.4
+  [87fe0de2] LineSearch v0.1.5
   [d3d80556] LineSearches v7.5.1
-  [7ed4a6bd] LinearSolve v3.54.0
+  [7ed4a6bd] LinearSolve v3.55.0
   [2ab3a3ac] LogExpFunctions v0.3.29
   [e6f89c97] LoggingExtras v1.2.0
   [1914dd2f] MacroTools v0.5.16
@@ -119,84 +121,85 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [e1d29d7a] Missings v1.2.0
   [2e0e35c7] Moshi v0.3.7
   [46d2c3a1] MuladdMacro v0.2.4
-  [f9640e96] MultiScaleArrays v1.17.0 `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl`
+  [f9640e96] MultiScaleArrays v1.17.0 `~/github-runners/deepsea4-2/_work/MultiScaleArrays.jl/MultiScaleArrays.jl`
   [d41bc354] NLSolversBase v7.10.0
   [77ba4419] NaNMath v1.1.3
-  [8913a72c] NonlinearSolve v4.12.0
+  [8913a72c] NonlinearSolve v4.13.0
   [be0214bd] NonlinearSolveBase v2.9.0
-  [5959db7a] NonlinearSolveFirstOrder v1.10.0
-  [9a2c21bd] NonlinearSolveQuasiNewton v1.11.0
+  [5959db7a] NonlinearSolveFirstOrder v1.11.0
+  [9a2c21bd] NonlinearSolveQuasiNewton v1.12.0
   [26075421] NonlinearSolveSpectralMethods v1.6.0
   [429524aa] Optim v1.13.3
   [bac558e1] OrderedCollections v1.8.1
   [1dea7af3] OrdinaryDiffEq v6.105.0
-  [89bda076] OrdinaryDiffEqAdamsBashforthMoulton v1.7.0
-  [6ad6398a] OrdinaryDiffEqBDF v1.12.0
-  [bbf590c4] OrdinaryDiffEqCore v2.1.0
-  [50262376] OrdinaryDiffEqDefault v1.10.0
-  [4302a76b] OrdinaryDiffEqDifferentiation v1.19.0
-  [9286f039] OrdinaryDiffEqExplicitRK v1.6.0
-  [e0540318] OrdinaryDiffEqExponentialRK v1.10.0
-  [becaefa8] OrdinaryDiffEqExtrapolation v1.11.0
-  [5960d6e9] OrdinaryDiffEqFIRK v1.18.0
-  [101fe9f7] OrdinaryDiffEqFeagin v1.6.0
-  [d3585ca7] OrdinaryDiffEqFunctionMap v1.7.0
-  [d28bc4f8] OrdinaryDiffEqHighOrderRK v1.7.0
-  [9f002381] OrdinaryDiffEqIMEXMultistep v1.9.0
-  [521117fe] OrdinaryDiffEqLinear v1.8.0
-  [1344f307] OrdinaryDiffEqLowOrderRK v1.8.0
-  [b0944070] OrdinaryDiffEqLowStorageRK v1.9.0
-  [127b3ac7] OrdinaryDiffEqNonlinearSolve v1.17.0
-  [c9986a66] OrdinaryDiffEqNordsieck v1.6.0
-  [5dd0a6cf] OrdinaryDiffEqPDIRK v1.8.0
-  [5b33eab2] OrdinaryDiffEqPRK v1.6.0
-  [04162be5] OrdinaryDiffEqQPRK v1.6.0
-  [af6ede74] OrdinaryDiffEqRKN v1.7.0
-  [43230ef6] OrdinaryDiffEqRosenbrock v1.20.0
-  [2d112036] OrdinaryDiffEqSDIRK v1.9.0
-  [669c94d9] OrdinaryDiffEqSSPRK v1.9.0
-  [e3e12d00] OrdinaryDiffEqStabilizedIRK v1.8.0
-  [358294b1] OrdinaryDiffEqStabilizedRK v1.6.0
-  [fa646aed] OrdinaryDiffEqSymplecticRK v1.9.0
-  [b1df2697] OrdinaryDiffEqTsit5 v1.7.0
-  [79d7bb75] OrdinaryDiffEqVerner v1.8.0
+  [89bda076] OrdinaryDiffEqAdamsBashforthMoulton v1.8.0
+  [6ad6398a] OrdinaryDiffEqBDF v1.13.0
+  [bbf590c4] OrdinaryDiffEqCore v2.3.0
+  [50262376] OrdinaryDiffEqDefault v1.11.0
+  [4302a76b] OrdinaryDiffEqDifferentiation v1.21.0
+  [9286f039] OrdinaryDiffEqExplicitRK v1.7.0
+  [e0540318] OrdinaryDiffEqExponentialRK v1.11.0
+  [becaefa8] OrdinaryDiffEqExtrapolation v1.12.0
+  [5960d6e9] OrdinaryDiffEqFIRK v1.19.0
+  [101fe9f7] OrdinaryDiffEqFeagin v1.7.0
+  [d3585ca7] OrdinaryDiffEqFunctionMap v1.8.0
+  [d28bc4f8] OrdinaryDiffEqHighOrderRK v1.8.0
+  [9f002381] OrdinaryDiffEqIMEXMultistep v1.10.0
+  [521117fe] OrdinaryDiffEqLinear v1.9.0
+  [1344f307] OrdinaryDiffEqLowOrderRK v1.9.0
+  [b0944070] OrdinaryDiffEqLowStorageRK v1.10.0
+  [127b3ac7] OrdinaryDiffEqNonlinearSolve v1.18.0
+  [c9986a66] OrdinaryDiffEqNordsieck v1.7.0
+  [5dd0a6cf] OrdinaryDiffEqPDIRK v1.9.0
+  [5b33eab2] OrdinaryDiffEqPRK v1.7.0
+  [04162be5] OrdinaryDiffEqQPRK v1.7.0
+  [af6ede74] OrdinaryDiffEqRKN v1.8.0
+  [43230ef6] OrdinaryDiffEqRosenbrock v1.21.0
+  [2d112036] OrdinaryDiffEqSDIRK v1.10.0
+  [669c94d9] OrdinaryDiffEqSSPRK v1.10.0
+  [e3e12d00] OrdinaryDiffEqStabilizedIRK v1.9.0
+  [358294b1] OrdinaryDiffEqStabilizedRK v1.7.0
+  [fa646aed] OrdinaryDiffEqSymplecticRK v1.10.0
+  [b1df2697] OrdinaryDiffEqTsit5 v1.8.0
+  [79d7bb75] OrdinaryDiffEqVerner v1.9.0
   [90014a1f] PDMats v0.11.37
   [69de0a69] Parsers v2.8.3
   [e409e4f3] PoissonRandom v0.4.7
   [f517fe37] Polyester v0.7.18
   [1d0040c9] PolyesterWeave v0.2.2
   [85a6dd25] PositiveFactorizations v0.2.4
-  [d236fae5] PreallocationTools v0.4.34
+⌅ [d236fae5] PreallocationTools v0.4.34
   [aea7be01] PrecompileTools v1.3.3
   [21216c6a] Preferences v1.5.1
   [43287f4e] PtrArrays v1.3.0
   [1fd47b50] QuadGK v2.11.2
   [74087812] Random123 v1.7.1
   [e6cf234a] RandomNumbers v1.6.0
+  [817f1d60] ReTestItems v1.35.0
   [3cdcf5f2] RecipesBase v1.3.4
   [731186ca] RecursiveArrayTools v3.42.1
   [189a3867] Reexport v1.2.2
   [2792f1a3] RegistryInstances v0.1.0
   [ae029012] Requires v1.3.1
-  [ae5879a3] ResettableStacks v1.1.1
+  [ae5879a3] ResettableStacks v1.2.0
   [79098fc4] Rmath v0.9.0
   [7e49a35a] RuntimeGeneratedFunctions v0.5.16
   [94e857df] SIMDTypes v0.1.0
-  [0bca4576] SciMLBase v2.130.0
+  [0bca4576] SciMLBase v2.131.0
   [19f34311] SciMLJacobianOperators v0.1.12
-  [a6db7da4] SciMLLogging v1.7.1
+  [a6db7da4] SciMLLogging v1.8.0
   [c0aeaf25] SciMLOperators v1.14.1
-  [431bcebd] SciMLPublic v1.0.0
-  [53ae85a6] SciMLStructures v1.7.0
+  [431bcebd] SciMLPublic v1.0.1
+  [53ae85a6] SciMLStructures v1.9.0
   [efcf1570] Setfield v1.1.2
-  [727e6d20] SimpleNonlinearSolve v2.9.0
+  [727e6d20] SimpleNonlinearSolve v2.10.0
   [699a6c99] SimpleTraits v0.9.5
   [a2af1166] SortingAlgorithms v1.2.2
   [0a514795] SparseMatrixColorings v0.4.23
   [276daf66] SpecialFunctions v2.6.1
   [aedffcd0] Static v1.3.1
   [0d7ed370] StaticArrayInterface v1.8.0
-  [90137ffa] StaticArrays v1.9.15
+  [90137ffa] StaticArrays v1.9.16
   [1e83bf80] StaticArraysCore v1.4.4
   [10745b16] Statistics v1.11.1
   [82ae8749] StatsAPI v1.8.0
@@ -206,6 +209,7 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [7792a7ef] StrideArraysCore v0.5.8
   [ec057cc2] StructUtils v2.6.0
   [2efcf032] SymbolicIndexingInterface v0.3.46
+  [1e6cf692] TestEnv v1.103.0
   [8290d209] ThreadingUtilities v0.5.5
   [a759f4b9] TimerOutputs v0.5.29
   [3bb67fe8] TranscodingStreams v0.11.3
@@ -266,4 +270,5 @@ Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></detai
   [83775a58] Zlib_jll v1.3.1+2
   [8e850b90] libblastrampoline_jll v5.15.0+0
   [8e850ede] nghttp2_jll v1.64.0+1
-  [3f19e933] p7zip_jll v17.7.0+0</code></pre></details><p>You can also download the <a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.17.0/assets/Manifest.toml">manifest</a> file and the <a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.17.0/assets/Project.toml">project</a> file.</p></article><nav class="docs-footer"><a class="docs-footer-nextpage" href="multiscalearray/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Tuesday 23 December 2025 09:43">Tuesday 23 December 2025</span>. Using Julia version 1.12.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  [3f19e933] p7zip_jll v17.7.0+0
+Info Packages marked with ⌅ have new versions available but compatibility constraints restrict them from upgrading. To see why use `status --outdated -m`</code></pre></details><p>You can also download the <a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.17.0/assets/Manifest.toml">manifest</a> file and the <a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.17.0/assets/Project.toml">project</a> file.</p></article><nav class="docs-footer"><a class="docs-footer-nextpage" href="multiscalearray/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Tuesday 30 December 2025 21:11">Tuesday 30 December 2025</span>. Using Julia version 1.12.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
