--- a/dev/index.html
+++ b/dev/index.html
@@ -26,21 +26,19 @@ population2 = construct(Population, deepcopy([cell1, cell3, cell4]))
 population3 = construct(Population, deepcopy([cell1, cell3, cell4]))
 tissue1 = construct(Tissue, deepcopy([population, population2, population3])) # Make a Tissue from Populations
 tissue2 = construct(Tissue, deepcopy([population2, population, population3]))
-embryo = construct(Embryo, deepcopy([tissue1, tissue2])) # Make an embryo from Tissues</code></pre><h2 id="Idea"><a class="docs-heading-anchor" href="#Idea">Idea</a><a id="Idea-1"></a><a class="docs-heading-anchor-permalink" href="#Idea" title="Permalink"></a></h2><p>The idea behind MultiScaleArrays is simple. The <code>*DiffEq</code> solvers (OrdinaryDiffEq.jl, StochasticDiffEq.jl, DelayDiffEq.jl, etc.) and native optimization packages like Optim.jl in their efficient in-place form all work with any Julia-defined <code>AbstractArray</code> which has a linear index. Thus, to define our multiscale model, we develop a type which has an efficient linear index. One can think of representing cells with proteins as each being an array with values for each protein. The linear index of the multiscale model would be indexing through each protein of each cell. With proper index overloads, one can define a type such that <code>a[i]</code> does just that, and thus it will work in the differential equation solvers. MultiScaleArrays.jl takes that further by allowing one to recursively define an arbitrary <code>n</code>-level hierarchical model which has efficient indexing structures. The result is a type which models complex behavior, but the standard differential equation solvers will work directly and efficiently on this type, making it easy to develop novel models without having to re-develop advanced adaptive/stiff/stochastic/etc. solving techniques for each new model.</p><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to SciML.</p></li><li><p>See the <a href="https://github.com/SciML/SciMLStyle">SciML Style Guide</a> for common coding practices and other style decisions.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.zulipchat.com/#narrow/stream/279055-sciml-bridged">Julia Zulip</a></li><li>On the <a href="https://discourse.julialang.org">Julia Discourse forums</a></li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/github-runners/deepsea4-32/_work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Project.toml`
+embryo = construct(Embryo, deepcopy([tissue1, tissue2])) # Make an embryo from Tissues</code></pre><h2 id="Idea"><a class="docs-heading-anchor" href="#Idea">Idea</a><a id="Idea-1"></a><a class="docs-heading-anchor-permalink" href="#Idea" title="Permalink"></a></h2><p>The idea behind MultiScaleArrays is simple. The <code>*DiffEq</code> solvers (OrdinaryDiffEq.jl, StochasticDiffEq.jl, DelayDiffEq.jl, etc.) and native optimization packages like Optim.jl in their efficient in-place form all work with any Julia-defined <code>AbstractArray</code> which has a linear index. Thus, to define our multiscale model, we develop a type which has an efficient linear index. One can think of representing cells with proteins as each being an array with values for each protein. The linear index of the multiscale model would be indexing through each protein of each cell. With proper index overloads, one can define a type such that <code>a[i]</code> does just that, and thus it will work in the differential equation solvers. MultiScaleArrays.jl takes that further by allowing one to recursively define an arbitrary <code>n</code>-level hierarchical model which has efficient indexing structures. The result is a type which models complex behavior, but the standard differential equation solvers will work directly and efficiently on this type, making it easy to develop novel models without having to re-develop advanced adaptive/stiff/stochastic/etc. solving techniques for each new model.</p><h2 id="Contributing"><a class="docs-heading-anchor" href="#Contributing">Contributing</a><a id="Contributing-1"></a><a class="docs-heading-anchor-permalink" href="#Contributing" title="Permalink"></a></h2><ul><li><p>Please refer to the <a href="https://github.com/SciML/ColPrac/blob/master/README.md">SciML ColPrac: Contributor&#39;s Guide on Collaborative Practices for Community Packages</a> for guidance on PRs, issues, and other matters relating to contributing to SciML.</p></li><li><p>See the <a href="https://github.com/SciML/SciMLStyle">SciML Style Guide</a> for common coding practices and other style decisions.</p></li><li><p>There are a few community forums:</p><ul><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.org/slack/">Julia Slack</a></li><li>The #diffeq-bridged and #sciml-bridged channels in the <a href="https://julialang.zulipchat.com/#narrow/stream/279055-sciml-bridged">Julia Zulip</a></li><li>On the <a href="https://discourse.julialang.org">Julia Discourse forums</a></li><li>See also <a href="https://sciml.ai/community/">SciML Community page</a></li></ul></li></ul><h2 id="Reproducibility"><a class="docs-heading-anchor" href="#Reproducibility">Reproducibility</a><a id="Reproducibility-1"></a><a class="docs-heading-anchor-permalink" href="#Reproducibility" title="Permalink"></a></h2><details><summary>The documentation of this SciML package was built using these direct dependencies,</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Project.toml`
   [e30172f5] Documenter v1.16.1
-  [f9640e96] MultiScaleArrays v1.18.0 `~/github-runners/deepsea4-32/_work/MultiScaleArrays.jl/MultiScaleArrays.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.12.4
+  [f9640e96] MultiScaleArrays v1.18.0 `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl`</code></pre></details><details><summary>and using this machine and Julia version.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Julia Version 1.12.4
 Commit 01a2eadb047 (2026-01-06 16:56 UTC)
 Build Info:
   Official https://julialang.org release
 Platform Info:
   OS: Linux (x86_64-linux-gnu)
-  CPU: 128 × AMD EPYC 7513 32-Core Processor
+  CPU: 4 × AMD EPYC 7763 64-Core Processor
   WORD_SIZE: 64
   LLVM: libLLVM-18.1.7 (ORCJIT, znver3)
   GC: Built with stock GC
-Threads: 1 default, 1 interactive, 1 GC (on 128 virtual cores)
-Environment:
-  JULIA_DEPOT_PATH = /home/chrisrackauckas/github-runners/deepsea4-32/.julia</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/github-runners/deepsea4-32/_work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Manifest.toml`
+Threads: 1 default, 1 interactive, 1 GC (on 4 virtual cores)</code></pre></details><details><summary>A more complete overview of all dependencies and their versions is also provided.</summary><pre class="documenter-example-output"><code class="nohighlight hljs ansi">Status `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl/docs/Manifest.toml`
   [47edcb42] ADTypes v1.21.0
   [a4c015fc] ANSIColoredPrinters v0.0.1
   [1520ce14] AbstractTrees v0.4.5
@@ -65,16 +63,16 @@ Environment:
   [adafc99b] CpuId v0.3.1
   [9a962f9c] DataAPI v1.16.0
   [864edb3b] DataStructures v0.19.3
-  [2b5f629d] DiffEqBase v6.199.0
+  [2b5f629d] DiffEqBase v6.200.0
   [459566f4] DiffEqCallbacks v4.12.0
   [77a26b50] DiffEqNoiseProcess v5.26.0
   [163ba53b] DiffResults v1.1.0
   [b552c78f] DiffRules v1.15.1
-  [a0c0ee7d] DifferentiationInterface v0.7.14
+  [a0c0ee7d] DifferentiationInterface v0.7.16
   [31c24e10] Distributions v0.25.123
   [ffbed154] DocStringExtensions v0.9.5
   [e30172f5] Documenter v1.16.1
-  [4e289a0a] EnumX v1.0.5
+  [4e289a0a] EnumX v1.0.6
   [f151be2c] EnzymeCore v0.8.18
   [d4d017d3] ExponentialUtilities v1.30.0
   [e2ba6199] ExprTools v0.1.10
@@ -82,16 +80,16 @@ Environment:
   [7034ab61] FastBroadcast v0.3.5
   [9aa1b823] FastClosures v0.3.2
   [442a2c76] FastGaussQuadrature v1.1.0
-  [a4df4552] FastPower v1.3.0
-  [1a297f60] FillArrays v1.15.0
+  [a4df4552] FastPower v1.3.1
+  [1a297f60] FillArrays v1.16.0
   [6a86dc24] FiniteDiff v2.29.0
-  [f6369f11] ForwardDiff v1.3.1
+  [f6369f11] ForwardDiff v1.3.2
   [069b7b12] FunctionWrappers v1.1.3
   [77dc65aa] FunctionWrappersWrappers v0.1.3
   [46192b85] GPUArraysCore v0.2.0
   [c145ed77] GenericSchur v0.5.6
   [d7ba0133] Git v1.5.0
-  [86223c79] Graphs v1.13.3
+  [86223c79] Graphs v1.13.4
   [34004b35] HypergeometricFunctions v0.3.28
   [b5f81e59] IOCapture v1.0.0
   [615f187c] IfElse v0.1.1
@@ -102,8 +100,8 @@ Environment:
   [692b3bcd] JLLWrappers v1.7.1
   [682c06a0] JSON v1.4.0
   [ae98c720] Jieko v0.2.1
-  [ccbc3e58] JumpProcesses v9.21.0
-  [ba0b0d4f] Krylov v0.10.3
+  [ccbc3e58] JumpProcesses v9.21.1
+  [ba0b0d4f] Krylov v0.10.5
   [10f19ff3] LayoutPointers v0.1.17
   [0e77f7df] LazilyInitializedFields v1.3.0
   [2d8b4e74] LevyArea v1.0.0
@@ -119,52 +117,52 @@ Environment:
   [e1d29d7a] Missings v1.2.0
   [2e0e35c7] Moshi v0.3.7
   [46d2c3a1] MuladdMacro v0.2.4
-  [f9640e96] MultiScaleArrays v1.18.0 `~/github-runners/deepsea4-32/_work/MultiScaleArrays.jl/MultiScaleArrays.jl`
+  [f9640e96] MultiScaleArrays v1.18.0 `~/work/MultiScaleArrays.jl/MultiScaleArrays.jl`
   [d41bc354] NLSolversBase v8.0.0
   [77ba4419] NaNMath v1.1.3
-  [8913a72c] NonlinearSolve v4.14.0
-  [be0214bd] NonlinearSolveBase v2.9.1
-  [5959db7a] NonlinearSolveFirstOrder v1.11.0
+  [8913a72c] NonlinearSolve v4.15.0
+  [be0214bd] NonlinearSolveBase v2.11.2
+  [5959db7a] NonlinearSolveFirstOrder v1.11.1
   [9a2c21bd] NonlinearSolveQuasiNewton v1.12.0
   [26075421] NonlinearSolveSpectralMethods v1.6.0
   [bac558e1] OrderedCollections v1.8.1
-⌃ [1dea7af3] OrdinaryDiffEq v6.105.0
-⌃ [89bda076] OrdinaryDiffEqAdamsBashforthMoulton v1.8.0
-⌃ [6ad6398a] OrdinaryDiffEqBDF v1.13.0
-⌅ [bbf590c4] OrdinaryDiffEqCore v2.3.0
-⌃ [50262376] OrdinaryDiffEqDefault v1.11.0
-⌃ [4302a76b] OrdinaryDiffEqDifferentiation v1.21.0
-⌃ [9286f039] OrdinaryDiffEqExplicitRK v1.7.0
-⌃ [e0540318] OrdinaryDiffEqExponentialRK v1.11.0
-⌃ [becaefa8] OrdinaryDiffEqExtrapolation v1.12.0
-⌃ [5960d6e9] OrdinaryDiffEqFIRK v1.19.0
-⌃ [101fe9f7] OrdinaryDiffEqFeagin v1.7.0
-⌃ [d3585ca7] OrdinaryDiffEqFunctionMap v1.8.0
-⌃ [d28bc4f8] OrdinaryDiffEqHighOrderRK v1.8.0
-⌃ [9f002381] OrdinaryDiffEqIMEXMultistep v1.10.0
-⌃ [521117fe] OrdinaryDiffEqLinear v1.9.0
-⌃ [1344f307] OrdinaryDiffEqLowOrderRK v1.9.0
-⌃ [b0944070] OrdinaryDiffEqLowStorageRK v1.10.0
-⌃ [127b3ac7] OrdinaryDiffEqNonlinearSolve v1.18.1
-⌃ [c9986a66] OrdinaryDiffEqNordsieck v1.7.0
-⌃ [5dd0a6cf] OrdinaryDiffEqPDIRK v1.9.0
-⌃ [5b33eab2] OrdinaryDiffEqPRK v1.7.0
-⌃ [04162be5] OrdinaryDiffEqQPRK v1.7.0
-⌃ [af6ede74] OrdinaryDiffEqRKN v1.8.0
-⌃ [43230ef6] OrdinaryDiffEqRosenbrock v1.21.0
-⌃ [2d112036] OrdinaryDiffEqSDIRK v1.10.0
-⌃ [669c94d9] OrdinaryDiffEqSSPRK v1.10.0
-⌃ [e3e12d00] OrdinaryDiffEqStabilizedIRK v1.9.0
-⌃ [358294b1] OrdinaryDiffEqStabilizedRK v1.7.0
-⌃ [fa646aed] OrdinaryDiffEqSymplecticRK v1.10.0
-⌃ [b1df2697] OrdinaryDiffEqTsit5 v1.8.0
-⌃ [79d7bb75] OrdinaryDiffEqVerner v1.9.0
+  [1dea7af3] OrdinaryDiffEq v6.108.0
+  [89bda076] OrdinaryDiffEqAdamsBashforthMoulton v1.9.0
+  [6ad6398a] OrdinaryDiffEqBDF v1.16.0
+  [bbf590c4] OrdinaryDiffEqCore v3.4.0
+  [50262376] OrdinaryDiffEqDefault v1.12.0
+  [4302a76b] OrdinaryDiffEqDifferentiation v2.0.0
+  [9286f039] OrdinaryDiffEqExplicitRK v1.8.0
+  [e0540318] OrdinaryDiffEqExponentialRK v1.13.0
+  [becaefa8] OrdinaryDiffEqExtrapolation v1.15.0
+  [5960d6e9] OrdinaryDiffEqFIRK v1.22.0
+  [101fe9f7] OrdinaryDiffEqFeagin v1.8.0
+  [d3585ca7] OrdinaryDiffEqFunctionMap v1.9.0
+  [d28bc4f8] OrdinaryDiffEqHighOrderRK v1.9.0
+  [9f002381] OrdinaryDiffEqIMEXMultistep v1.12.0
+  [521117fe] OrdinaryDiffEqLinear v1.10.0
+  [1344f307] OrdinaryDiffEqLowOrderRK v1.10.0
+  [b0944070] OrdinaryDiffEqLowStorageRK v1.12.0
+  [127b3ac7] OrdinaryDiffEqNonlinearSolve v1.20.0
+  [c9986a66] OrdinaryDiffEqNordsieck v1.9.0
+  [5dd0a6cf] OrdinaryDiffEqPDIRK v1.11.0
+  [5b33eab2] OrdinaryDiffEqPRK v1.8.0
+  [04162be5] OrdinaryDiffEqQPRK v1.8.0
+  [af6ede74] OrdinaryDiffEqRKN v1.9.0
+  [43230ef6] OrdinaryDiffEqRosenbrock v1.23.0
+  [2d112036] OrdinaryDiffEqSDIRK v1.12.0
+  [669c94d9] OrdinaryDiffEqSSPRK v1.11.0
+  [e3e12d00] OrdinaryDiffEqStabilizedIRK v1.11.0
+  [358294b1] OrdinaryDiffEqStabilizedRK v1.8.0
+  [fa646aed] OrdinaryDiffEqSymplecticRK v1.11.0
+  [b1df2697] OrdinaryDiffEqTsit5 v1.9.0
+  [79d7bb75] OrdinaryDiffEqVerner v1.11.0
   [90014a1f] PDMats v0.11.37
   [69de0a69] Parsers v2.8.3
   [e409e4f3] PoissonRandom v0.4.7
   [f517fe37] Polyester v0.7.18
   [1d0040c9] PolyesterWeave v0.2.2
-⌅ [d236fae5] PreallocationTools v0.4.34
+  [d236fae5] PreallocationTools v1.1.2
   [aea7be01] PrecompileTools v1.3.3
   [21216c6a] Preferences v1.5.1
   [43287f4e] PtrArrays v1.3.0
@@ -172,18 +170,18 @@ Environment:
   [74087812] Random123 v1.7.1
   [e6cf234a] RandomNumbers v1.6.0
   [3cdcf5f2] RecipesBase v1.3.4
-  [731186ca] RecursiveArrayTools v3.44.0
+  [731186ca] RecursiveArrayTools v3.47.0
   [189a3867] Reexport v1.2.2
   [2792f1a3] RegistryInstances v0.1.0
   [ae029012] Requires v1.3.1
   [ae5879a3] ResettableStacks v1.2.0
   [79098fc4] Rmath v0.9.0
-  [7e49a35a] RuntimeGeneratedFunctions v0.5.16
+  [7e49a35a] RuntimeGeneratedFunctions v0.5.17
   [94e857df] SIMDTypes v0.1.0
-  [0bca4576] SciMLBase v2.134.0
+  [0bca4576] SciMLBase v2.136.0
   [19f34311] SciMLJacobianOperators v0.1.12
   [a6db7da4] SciMLLogging v1.8.0
-  [c0aeaf25] SciMLOperators v1.14.1
+  [c0aeaf25] SciMLOperators v1.15.1
   [431bcebd] SciMLPublic v1.0.1
   [53ae85a6] SciMLStructures v1.10.0
   [efcf1570] Setfield v1.1.2
@@ -200,7 +198,7 @@ Environment:
   [82ae8749] StatsAPI v1.8.0
   [2913bbd2] StatsBase v0.34.10
   [4c63d2b9] StatsFuns v1.5.2
-  [789caeaf] StochasticDiffEq v6.90.0
+  [789caeaf] StochasticDiffEq v6.93.0
   [7792a7ef] StrideArraysCore v0.5.8
   [ec057cc2] StructUtils v2.6.2
   [2efcf032] SymbolicIndexingInterface v0.3.46
@@ -264,5 +262,4 @@ Environment:
   [83775a58] Zlib_jll v1.3.1+2
   [8e850b90] libblastrampoline_jll v5.15.0+0
   [8e850ede] nghttp2_jll v1.64.0+1
-  [3f19e933] p7zip_jll v17.7.0+0
-Info Packages marked with ⌃ and ⌅ have new versions available. Those with ⌃ may be upgradable, but those with ⌅ are restricted by compatibility constraints from upgrading. To see why use `status --outdated -m`</code></pre></details><p>You can also download the <a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.18.0/assets/Manifest.toml">manifest</a> file and the <a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.18.0/assets/Project.toml">project</a> file.</p></article><nav class="docs-footer"><a class="docs-footer-nextpage" href="multiscalearray/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Friday 16 January 2026 09:55">Friday 16 January 2026</span>. Using Julia version 1.12.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  [3f19e933] p7zip_jll v17.7.0+0</code></pre></details><p>You can also download the <a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.18.0/assets/Manifest.toml">manifest</a> file and the <a href="https://github.com/SciML/MultiScaleArrays.jl/tree/gh-pages/v1.18.0/assets/Project.toml">project</a> file.</p></article><nav class="docs-footer"><a class="docs-footer-nextpage" href="multiscalearray/">API »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="auto">Automatic (OS)</option><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option><option value="catppuccin-latte">catppuccin-latte</option><option value="catppuccin-frappe">catppuccin-frappe</option><option value="catppuccin-macchiato">catppuccin-macchiato</option><option value="catppuccin-mocha">catppuccin-mocha</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 1.16.1 on <span class="colophon-date" title="Tuesday 3 February 2026 10:58">Tuesday 3 February 2026</span>. Using Julia version 1.12.4.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
